<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_background"
    android:orientation="vertical"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/activity_result"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="0.9">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <View
                android:layout_width="fill_parent"
                android:layout_height="3dp"
                android:layout_marginTop="1dp"
                android:background="@color/darkPurple" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.5dp"
                android:layout_marginTop="1.5dp"
                android:background="@color/darkPurple" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.5dp"
                android:layout_marginTop="1dp"
                android:background="@color/darkPurple" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="402dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_likeCount"
                    android:layout_width="70dp"
                    android:layout_height="35dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/img_like_count"
                    android:gravity="bottom|center_horizontal"
                    android:text="@string/details_like_count"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/hotPink" />

                <ImageView
                    android:id="@+id/img_detailPerfImg"
                    android:layout_width="170dp"
                    android:layout_height="240dp"
                    android:contentDescription="@string/perfume_image" />

                <TextView
                    android:id="@+id/txt_detailPerfBrand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/perfume_brand"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/turbidPurple" />

                <TextView
                    android:id="@+id/txt_detailPerfName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/perfume_name"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black"
                    android:textStyle="bold" />


            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="3dp"
                android:layout_marginTop="1.5dp"
                android:background="@color/darkPurple" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/purple"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/btn_priceCompare"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/img_priceCompare"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:padding="5dp"
                        android:src="@drawable/img_price" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentTop="true"
                        android:layout_toEndOf="@+id/img_priceCompare"
                        android:layout_toRightOf="@+id/img_priceCompare"
                        android:gravity="center_vertical"
                        android:text="@string/details_btn_price"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@color/white"
                        android:textStyle="bold" />
                </RelativeLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/white" />

                <RelativeLayout
                    android:id="@+id/btn_likeThis"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/img_likeThis"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:padding="5dp"
                        android:src="@drawable/img_like" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentTop="true"
                        android:layout_toEndOf="@+id/img_likeThis"
                        android:layout_toRightOf="@+id/img_likeThis"
                        android:gravity="center_vertical"
                        android:text="@string/details_btn_like"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@color/white"
                        android:textStyle="bold" />
                </RelativeLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/white" />

                <RelativeLayout
                    android:id="@+id/btn_askRevision"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/img_askRevision"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:padding="5dp"
                        android:src="@drawable/img_request" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentTop="true"
                        android:layout_toEndOf="@+id/img_askRevision"
                        android:layout_toRightOf="@+id/img_askRevision"
                        android:gravity="center_vertical"
                        android:text="@string/details_btn_revise"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@color/white"
                        android:textStyle="bold" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
